frontend/test/should_pass/basic_007.grg
rule r {
	x : Node;

	replace {
	}
}

