frontend/test/should_fail/negative_007.grg
rule r
{
	negative {
        iterated {
            n:Node;
			
            modify {
            }
        }
	}
	
	replace {
	}
}
